// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkList should render correctly 1`] = `
<ul
  className="bpk-list"
>
  <li>
    list item
  </li>
</ul>
`;

exports[`BpkList should render correctly with a "ordered" attribute 1`] = `
<ol
  className="bpk-list"
>
  <li>
    list item
  </li>
</ol>
`;
